objects/Booking__c/fields/Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>Booking_Number__c</fullName>
    <displayFormat>BK-{0000}</displayFormat>
    <label>Booking Number</label>
    <type>AutoNumber</type>
</CustomField>