objects/Booking__c/fields/Total_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Booking_Amount__c</fullName>
    <label>Total Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>